# reminder-sink

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
reminder_sink/: __main__.py
